--- a/wp-content/themes/superfun-games/compiled.css
+++ b/wp-content/themes/superfun-games/compiled.css
@@ -570,8 +570,16 @@ video {
   position: relative;
 }
 
-.-bottom-\[2\.5\%\] {
-  bottom: -2.5%;
+.-bottom-16 {
+  bottom: -4rem;
+}
+
+.-bottom-5 {
+  bottom: -1.25rem;
+}
+
+.-bottom-\[3\%\] {
+  bottom: -3%;
 }
 
 .-left-2 {
@@ -602,12 +610,16 @@ video {
   bottom: 3rem;
 }
 
-.bottom-2 {
-  bottom: 0.5rem;
+.bottom-72 {
+  bottom: 18rem;
 }
 
-.bottom-\[5\%\] {
-  bottom: 5%;
+.bottom-8 {
+  bottom: 2rem;
+}
+
+.bottom-\[3\%\] {
+  bottom: 3%;
 }
 
 .left-0 {
@@ -650,16 +662,24 @@ video {
   top: 1.5rem;
 }
 
+.top-\[10\%\] {
+  top: 10%;
+}
+
+.top-\[12\%\] {
+  top: 12%;
+}
+
+.top-\[20\%\] {
+  top: 20%;
+}
+
 .top-\[25\%\] {
   top: 25%;
 }
 
-.bottom-6 {
-  bottom: 1.5rem;
-}
-
-.bottom-4 {
-  bottom: 1rem;
+.top-\[30\%\] {
+  top: 30%;
 }
 
 .z-10 {
@@ -799,6 +819,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.rotate-6 {
+  --tw-rotate: 6deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .rotate-\[16deg\] {
   --tw-rotate: 16deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -850,6 +875,10 @@ video {
   flex-direction: column;
 }
 
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
 .items-start {
   align-items: flex-start;
 }
@@ -882,6 +911,14 @@ video {
   gap: 1rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .-space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(-0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -894,10 +931,10 @@ video {
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-4 > :not([hidden]) ~ :not([hidden]) {
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -912,16 +949,16 @@ video {
   margin-bottom: calc(4rem * var(--tw-space-y-reverse));
 }
 
-.space-y-4 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
@@ -942,6 +979,18 @@ video {
 
 .rounded-2xl {
   border-radius: 1rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border-2 {
@@ -983,6 +1032,16 @@ video {
   background-color: rgb(15 255 80 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#E9D3FF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 211 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#FF5C00\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 92 0 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\#FFC833\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 200 51 / var(--tw-bg-opacity, 1));
@@ -998,6 +1057,11 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 255 133 / var(--tw-bg-opacity, 1));
+}
+
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
@@ -1006,21 +1070,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#E9D3FF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(233 211 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[\#FF5C00\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 92 0 / var(--tw-bg-opacity, 1));
-}
-
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 255 133 / var(--tw-bg-opacity, 1));
 }
 
 .object-contain {
@@ -1073,14 +1122,19 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
 
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .py-16 {
@@ -1103,6 +1157,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -1118,21 +1177,12 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .pb-16 {
   padding-bottom: 4rem;
 }
 
 .pb-2 {
   padding-bottom: 0.5rem;
-}
-
-.pb-24 {
-  padding-bottom: 6rem;
 }
 
 .pb-32 {
@@ -1143,28 +1193,12 @@ video {
   padding-bottom: 9rem;
 }
 
-.pr-14 {
-  padding-right: 3.5rem;
-}
-
 .pr-16 {
   padding-right: 4rem;
 }
 
 .pt-4 {
   padding-top: 1rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
-}
-
-.pt-8 {
-  padding-top: 2rem;
-}
-
-.pb-12 {
-  padding-bottom: 3rem;
 }
 
 .text-center {
@@ -1185,9 +1219,12 @@ video {
   line-height: 2.5rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-\[1\.15em\] {
+  font-size: 1.15em;
+}
+
+.text-\[16px\] {
+  font-size: 16px;
 }
 
 .text-base {
@@ -1210,11 +1247,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1231,16 +1263,16 @@ video {
   text-transform: uppercase;
 }
 
+.\!leading-none {
+  line-height: 1 !important;
+}
+
 .leading-6 {
   line-height: 1.5rem;
 }
 
-.leading-none {
-  line-height: 1;
-}
-
-.\!leading-none {
-  line-height: 1 !important;
+.leading-tight {
+  line-height: 1.25;
 }
 
 .-tracking-\[\.0375rem\] {
@@ -1260,16 +1292,6 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
-}
-
-.text-purple-950 {
-  --tw-text-opacity: 1;
-  color: rgb(59 7 100 / var(--tw-text-opacity, 1));
-}
-
 .text-orange-500 {
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity, 1));
@@ -1278,6 +1300,16 @@ video {
 .text-purple-300 {
   --tw-text-opacity: 1;
   color: rgb(216 180 254 / var(--tw-text-opacity, 1));
+}
+
+.text-purple-950 {
+  --tw-text-opacity: 1;
+  color: rgb(59 7 100 / var(--tw-text-opacity, 1));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -1296,36 +1328,8 @@ video {
   opacity: 0.8;
 }
 
-.opacity-0 {
-  opacity: 0;
-}
-
 .opacity-90 {
   opacity: 0.9;
-}
-
-.opacity-95 {
-  opacity: 0.95;
-}
-
-.mix-blend-multiply {
-  mix-blend-mode: multiply;
-}
-
-.mix-blend-darken {
-  mix-blend-mode: darken;
-}
-
-.mix-blend-hard-light {
-  mix-blend-mode: hard-light;
-}
-
-.mix-blend-soft-light {
-  mix-blend-mode: soft-light;
-}
-
-.mix-blend-saturation {
-  mix-blend-mode: saturation;
 }
 
 .shadow-2xl {
@@ -1628,6 +1632,11 @@ strong, nav a, .font-bold{
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:bg-\[\#FF3C00\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 60 0 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:bg-black:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
@@ -1641,51 +1650,6 @@ strong, nav a, .font-bold{
 .hover\:bg-purple-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(216 180 254 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-orange-950:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(67 20 7 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-orange-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 88 12 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-amber-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 158 11 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-orange-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-amber-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(180 83 9 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-red-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-\[\#FF3C00\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 60 0 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-\[\#6B5899\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 88 153 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-purple-950:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 7 100 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:font-normal:hover {
@@ -1711,6 +1675,10 @@ strong, nav a, .font-bold{
     right: -2.5rem;
   }
 
+  .md\:bottom-8 {
+    bottom: 2rem;
+  }
+
   .md\:bottom-auto {
     bottom: auto;
   }
@@ -1719,16 +1687,20 @@ strong, nav a, .font-bold{
     top: 1rem;
   }
 
-  .md\:bottom-12 {
-    bottom: 3rem;
-  }
-
-  .md\:bottom-8 {
-    bottom: 2rem;
+  .md\:inline-block {
+    display: inline-block;
   }
 
   .md\:inline {
     display: inline;
+  }
+
+  .md\:flex {
+    display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
   }
 
   .md\:h-6 {
@@ -1743,8 +1715,27 @@ strong, nav a, .font-bold{
     width: 1.5rem;
   }
 
+  .md\:rotate-2 {
+    --tw-rotate: 2deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
   .md\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .md\:gap-12 {
+    gap: 3rem;
+  }
+
+  .md\:space-y-16 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(4rem * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(4rem * var(--tw-space-y-reverse));
   }
 
   .md\:overflow-visible {
@@ -1756,6 +1747,21 @@ strong, nav a, .font-bold{
     padding-right: 1.5rem;
   }
 
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .md\:py-1 {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+  }
+
+  .md\:py-20 {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
   .md\:py-5 {
     padding-top: 1.25rem;
     padding-bottom: 1.25rem;
@@ -1765,9 +1771,9 @@ strong, nav a, .font-bold{
     padding-right: 9rem;
   }
 
-  .md\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .md\:text-\[26px\] {
@@ -1821,10 +1827,6 @@ strong, nav a, .font-bold{
     display: grid;
   }
 
-  .lg\:hidden {
-    display: none;
-  }
-
   .lg\:h-screen {
     height: 100vh;
   }
@@ -1861,6 +1863,16 @@ strong, nav a, .font-bold{
 
   .lg\:grid-rows-\[72px_1fr_1fr\] {
     grid-template-rows: 72px 1fr 1fr;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .lg\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
@@ -1917,12 +1929,20 @@ strong, nav a, .font-bold{
     padding-bottom: 2rem;
   }
 
+  .lg\:pb-16 {
+    padding-bottom: 4rem;
+  }
+
   .lg\:pb-32 {
     padding-bottom: 8rem;
   }
 
   .lg\:pr-28 {
     padding-right: 7rem;
+  }
+
+  .lg\:pt-8 {
+    padding-top: 2rem;
   }
 
   .lg\:text-2xl {
@@ -1934,9 +1954,18 @@ strong, nav a, .font-bold{
     font-size: 3rem;
     line-height: 1;
   }
+
+  .lg\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:-right-16 {
+    right: -4rem;
+  }
+
   .xl\:bottom-\[1\.125\%\] {
     bottom: 1.125%;
   }
@@ -1949,47 +1978,8 @@ strong, nav a, .font-bold{
     bottom: 6.5%;
   }
 
-  .xl\:-right-16 {
-    right: -4rem;
-  }
-
-  .xl\:w-56 {
-    width: 14rem;
-  }
-
   .xl\:w-64 {
     width: 16rem;
-  }
-
-  .xl\:w-72 {
-    width: 18rem;
-  }
-
-  .xl\:text-\[80px\] {
-    font-size: 80px;
-  }
-
-  .xl\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .xl\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .xl\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .xl\:text-\[64px\] {
-    font-size: 64px;
-  }
-
-  .xl\:text-\[48px\] {
-    font-size: 48px;
   }
 
   .xl\:text-\[32px\] {
@@ -2018,6 +2008,21 @@ strong, nav a, .font-bold{
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
+.dark\:bg-\[\#0F4263\]:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 66 99 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-\[\#493290\]:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(73 50 144 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:bg-\[\#FF3C00\]:where(.dark, .dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 60 0 / var(--tw-bg-opacity, 1));
+}
+
 .dark\:bg-black:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
@@ -2026,46 +2031,6 @@ strong, nav a, .font-bold{
 .dark\:bg-white:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-\[\#FF3C00\]:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 60 0 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-purple-300:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(216 180 254 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-\[\#6B5899\]:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 88 153 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-\[\#3D0024\]:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(61 0 36 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-\[\#81087D\]:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(129 8 125 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-\[\#493290\]:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(73 50 144 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-\[\#0F4263\]:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 66 99 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:bg-green-500:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 255 133 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:text-black:where(.dark, .dark *) {
@@ -2078,44 +2043,14 @@ strong, nav a, .font-bold{
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.dark\:hover\:bg-\[\#FF3C00\]:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 60 0 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-\[\#FF5C00\]:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 92 0 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:hover\:bg-\[\#E9D3FF\]:hover:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(233 211 255 / var(--tw-bg-opacity, 1));
 }
 
-.dark\:hover\:bg-\[\#FF3300\]:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 51 0 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-\[\#E12D00\]:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(225 45 0 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-\[\#FFAA00\]:hover:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 170 0 / var(--tw-bg-opacity, 1));
-}
-
 .dark\:hover\:bg-\[\#FFC800\]:hover:where(.dark, .dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 200 0 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:text-white:hover:where(.dark, .dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .dark\:hover\:text-black:hover:where(.dark, .dark *) {
